# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: gendiff-check.yml
gendiff/: __init__.py  file_parser.py  file_reader.py  gendiff.py  get_diff.py  newgen.py  parser_args.py  stylish.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
