[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Difference calculator"
authors = ["Andrey Bogatyrev <t2way@yandex.ru>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
