[tool.poetry]
name = "hexlet-code"
version = "0.1.8"
description = "Detection of Differences is CLI utility allows to determine the differences of two .json or .yaml files"
authors = ["Andrey Bogatyrev <t2way@yandex.ru>"]
readme = "README.md"
packages = [{include = "gendiff"}]
classifiers = ["Programming Language :: Python :: 3",
               "Environment :: Console"]
repository = "https://github.com/Onoiro/python-project-50"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
